--- a/style.css
+++ b/style.css
@@ -21,14 +21,14 @@ body{
 
 #canvas{
     display: flex;
-    margin: 30px 0px;
+    width: 480px;
+    height: 480px;
+    margin: 30px auto;
     align-items: center;
     justify-content: center;
 }
 
 .pixel{
     background-color: #EEEEEE;
-    height: 20px;
-    width: 20px;
     border: 1px solid #DDDDDD;
 }
